# OpenPharmaco

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  setup.py
Documents/: Document-ENG.html  Document-ENG.md  Document-KOR.html  Document-KOR.md
modules/openph_gui/: __init__.py  actions.py  cmd.py  main.py  setting.py  window.py
modules/openph_gui/dialogs/: gdown_dialog.py  pmnet_dialog.py
modules/openph_gui/main_widget/: __init__.py  explorer.py  main_widget.py
modules/openph_gui/main_widget/elements/: base.py  binding_site.py  model.py  protein.py
modules/openph_gui/molviewer/: __init__.py  binding_site.py  common.py  constant.py  model.py  protein.py
modules/openph_gui/screening_widget/: main_dialog.py
modules/openpharm/: __init__.py  actions.py  main.py  openpharm_widget.py  parse.py  setting.py  widget.py  window.py
modules/openpharm/objects/: __init__.py  download_dialog.py  explorer.py  pmnet_dialog.py
modules/openpharm/screening_window/: main_dialog.py  utils.py
modules/pmgui/: __init__.py  actions.py  main.py  parse.py  setting.py  widget.py  window.py
modules/pmgui/objects/: explorer.py
modules/pmgui/screening_window/: main_dialog.py
modules/pmnet/: module.py  pharmacophore_model.py
modules/pmnet/data/: constant.py  extract_pocket.py  pointcloud.py  token_inference.py
modules/pmnet/scoring/: graph_match.py  ligand.py  tree.py
modules/pmnet/utils/: density_map.py
openpharm/: __init__.py  main.py
openpharm/gui/: __init__.py  actions.py  openpharm_widget.py  parse.py  setting.py
openpharm/gui/images/: favicon.ai
openpharm/gui/objects/: download_dialog.py  explorer.py  pmnet_dialog.py  signal.py
openpharm/gui/screening_window/: __init__.py  main_dialog.py  utils.py
openpharm/pmnet/: __init__.py  module.py
openpharm/pmnet/scoring/: graph_match.py  tree.py
(+2 files in other folders)
